@@ -9,31 +9,31 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.Mockito;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
-import uk.gov.hmcts.dm.componenttests.TestUtil;
 import uk.gov.hmcts.dm.config.ToggleConfiguration;
 import uk.gov.hmcts.dm.domain.DocumentContentVersion;
+import uk.gov.hmcts.dm.domain.StoredDocument;
 import uk.gov.hmcts.dm.exception.InvalidRangeRequestException;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
+import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.any;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.lenient;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-@ExtendWith(SpringExtension.class)
+@ExtendWith(MockitoExtension.class)
 class BlobStorageReadServiceTest {
 
     private BlobStorageReadService blobStorageReadService;
-
     private DocumentContentVersion documentContentVersion;
 
     @Mock
@@ -56,10 +56,18 @@ class BlobStorageReadServiceTest {
 
     @BeforeEach
     void setUp() {
-        when(cloudBlobContainer.getBlobClient(any())).thenReturn(blobClient);
-        when(blobClient.getBlockBlobClient()).thenReturn(blockBlobClient);
+        lenient().when(cloudBlobContainer.getBlobClient(any())).thenReturn(blobClient);
+        lenient().when(blobClient.getBlockBlobClient()).thenReturn(blockBlobClient);
 
-        documentContentVersion = TestUtil.DOCUMENT_CONTENT_VERSION;
+        documentContentVersion = DocumentContentVersion.builder()
+            .id(UUID.randomUUID())
+            .mimeType("text/plain")
+            .originalDocumentName("filename.txt")
+            .size(4L)
+            .contentUri("someUri")
+            .storedDocument(StoredDocument.builder().id(UUID.randomUUID()).build())
+            .build();
+
         blobStorageReadService = new BlobStorageReadService(cloudBlobContainer, toggleConfiguration);
     }
 
@@ -79,9 +87,11 @@ class BlobStorageReadServiceTest {
     @Test
     void loadsBlobWithHeaderNames() throws IOException {
         when(toggleConfiguration.isChunking()).thenReturn(true);
-        when(request.getHeaderNames()).thenReturn(Collections.enumeration(Arrays.asList("Content")));
-        when(request.getHeaders("Content")).thenReturn(Collections.enumeration(Arrays.asList("ContentValue")));
+        when(request.getHeaderNames()).thenReturn(Collections.enumeration(List.of("Content")));
+        when(request.getHeaders("Content")).thenReturn(Collections.enumeration(List.of("ContentValue")));
+
         blobStorageReadService.loadBlob(documentContentVersion, request, response);
+
         verify(blockBlobClient).downloadStream(response.getOutputStream());
     }
 
@@ -107,34 +117,31 @@ class BlobStorageReadServiceTest {
 
     @Test
     void loadsRangedBlobTooLargeRangeHeader() throws IOException {
-
         when(toggleConfiguration.isChunking()).thenReturn(true);
         when(request.getHeader(HttpHeaders.RANGE.toLowerCase())).thenReturn("bytes=0-1023");
 
         blobStorageReadService.loadBlob(documentContentVersion, request, response);
 
-        // whole doc is returned so we never set the partial content header
-        Mockito.verify(response, Mockito.times(0)).setStatus(HttpStatus.PARTIAL_CONTENT.value());
-        Mockito.verify(response, Mockito.times(1)).setHeader(HttpHeaders.CONTENT_RANGE, "bytes 0-4/4");
-        Mockito.verify(response, Mockito.times(1)).setHeader(HttpHeaders.CONTENT_LENGTH, "5");
+        verify(response, times(0)).setStatus(HttpStatus.PARTIAL_CONTENT.value());
+        verify(response, times(1)).setHeader(HttpHeaders.CONTENT_RANGE, "bytes 0-4/4");
+        verify(response, times(1)).setHeader(HttpHeaders.CONTENT_LENGTH, "5");
     }
 
     @Test
     void loadsRangedBlobInvalidRangeHeader() throws IOException {
-
         when(toggleConfiguration.isChunking()).thenReturn(true);
         when(request.getHeader(HttpHeaders.RANGE.toLowerCase())).thenReturn("bytes=0-2");
 
         blobStorageReadService.loadBlob(documentContentVersion, request, response);
 
-        Mockito.verify(response, Mockito.times(1)).setStatus(HttpStatus.PARTIAL_CONTENT.value());
-        Mockito.verify(response, Mockito.times(1)).setHeader(HttpHeaders.CONTENT_RANGE, "bytes 0-2/4");
-        Mockito.verify(response, Mockito.times(1)).setHeader(HttpHeaders.CONTENT_LENGTH, "3");
+        verify(response, times(1)).setStatus(HttpStatus.PARTIAL_CONTENT.value());
+        verify(response, times(1)).setHeader(HttpHeaders.CONTENT_RANGE, "bytes 0-2/4");
+        verify(response, times(1)).setHeader(HttpHeaders.CONTENT_LENGTH, "3");
     }
 
     @Test
     void doesBinaryExist() {
-        given(blockBlobClient.exists()).willReturn(true);
+        when(blockBlobClient.exists()).thenReturn(true);
         assertTrue(blobStorageReadService.doesBinaryExist(documentContentVersion.getId()));
     }
 
